<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.roster.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="The Roster"
        android:id="@+id/titleTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="Person&apos;s Name :"
        android:drawableLeft="@drawable/ic_person_24dp"
        android:id="@+id/nameTextView"
        android:layout_below="@+id/titleTextView"
        android:layout_marginLeft="10px"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/nameEditText"
        android:layout_below="@+id/nameTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Thinks We Are Going Steady"
        android:id="@+id/steadyCheckBox"
        android:checked="false"
        android:layout_below="@+id/nameEditText"
        android:layout_alignStart="@id/nameTextView" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eyecolorSpinner"
        android:entries="@array/eyecolor_arrays"
        android:layout_below="@+id/steadyCheckBox"
        android:layout_alignStart="@+id/titleTextView"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Eye Color :"
        android:id="@+id/eyecolorTextView"
        android:layout_alignTop="@+id/eyecolorSpinner"
        android:layout_alignStart="@+id/nameTextView"
        android:layout_toStartOf="@+id/eyecolorSpinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Birthday :"
        android:id="@+id/birthdayTextView"
        android:layout_alignStart="@+id/eyecolorTextView"
        android:layout_below="@+id/eyecolorTextView"
        android:layout_toStartOf="@+id/eyecolorSpinner"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/birthdayEditText"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_alignBaseline="@+id/birthdayTextView"
        android:layout_alignBottom="@+id/birthdayTextView"
        android:layout_alignEnd="@+id/eyecolorSpinner"
        android:layout_alignStart="@+id/eyecolorSpinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/shirtTextView"
        android:text="Shirt Size :"
        android:layout_below="@+id/birthdayTextView"
        android:layout_alignStart="@+id/birthdayTextView"
        android:layout_marginTop="10dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shirRadioGroup"
        android:checkedButton="@+id/shirtsize"
        android:orientation="horizontal"
        android:touchscreenBlocksFocus="false"
        android:layout_below="@+id/shirtTextView"
        android:layout_alignStart="@+id/shirtTextView"
        android:layout_alignEnd="@+id/eyecolorSpinner"
        android:layout_marginTop="5dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sizexs"
            android:text="@string/XS"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sizes"
            android:text="@string/S" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sizem"
            android:text="@string/M" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sizel"
            android:text="@string/L" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sizexl"
            android:text="@string/XL" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sizexxl"
            android:text="@string/XXL" />

    </RadioGroup>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pantSeekBar"
        android:layout_below="@+id/pantsizetextView"
        android:layout_alignStart="@+id/pantsizetextView"
        android:indeterminate="false"
        android:max="16"
        android:progress="0"
        android:layout_alignEnd="@+id/shirRadioGroup" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Pant Size :"
        android:id="@+id/pantsizetextView"
        android:layout_below="@+id/shirRadioGroup"
        android:layout_alignStart="@id/shirtTextView"
        android:layout_marginTop="4dp"
        android:layout_alignParentStart="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Shirt Size :"
        android:id="@+id/shirtsizeTextView"
        android:layout_below="@+id/pantSeekBar"
        android:layout_alignStart="@id/shirtTextView"
        android:layout_marginTop="4dp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shirtSeekBar"
        android:layout_below="@+id/shirtsizeTextView"
        android:layout_alignStart="@+id/shirtsizeTextView"
        android:layout_alignEnd="@+id/pantSeekBar"
        android:max="12"
        android:progress="0"
        android:indeterminate="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Shoe Size :"
        android:id="@+id/shoesizeTextView"
        android:layout_below="@+id/shirtSeekBar"
        android:layout_alignStart="@id/shirtTextView"
        android:layout_marginTop="4dp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shoeseekBar"
        android:layout_alignStart="@+id/shirtSeekBar"
        android:layout_below="@+id/shoesizeTextView"
        android:layout_alignEnd="@+id/eyecolorSpinner"
        android:max="8"
        android:progress="0"
        android:indeterminate="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:id="@+id/saveButton"
        android:onClick="saveRoster"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/psizetTextView"
        android:layout_alignTop="@+id/pantsizetextView"
        android:layout_alignEnd="@+id/eyecolorSpinner"
        android:layout_toEndOf="@+id/pantsizetextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/shisizeTextview"
        android:layout_alignTop="@+id/shirtsizeTextView"
        android:layout_alignEnd="@+id/psizetTextView"
        android:layout_toEndOf="@id/shirtsizeTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/shosizeTextView"
        android:layout_alignTop="@+id/shoesizeTextView"
        android:layout_alignEnd="@+id/shisizeTextview"
        android:layout_toEndOf="@id/shoesizeTextView" />


</RelativeLayout>
